fixed text-align center in the contact me portion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ header, section, aside {
 
 aside {
     height: 200px;
+    text-align: center;
 }
  
 header h2 {
